# logging-log4j2

./: .asf.yaml  .cherry_picker.toml  .classpath  .dockerignore  .gitattributes  .gitignore  .htaccess  .logging-parent-bom-activator  .travis-toolchains.xml  .travis.yaml  .travis.yml  404.html  5min.html  AGENTS.md  BUILDING.adoc  BUILDING.md  BUILDING.txt  CHANGELOG.adoc  CODE_OF_CONDUCT.adoc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUZZING.adoc  Jenkinsfile  LICENSE.txt  NOTICE.txt  README fdl  README.adoc  README.md  README.txt  RELEASE-NOTES.adoc  RELEASE-NOTES.md  RELEASE-NOTES.txt  SECURITY.adoc  SECURITY.md  Vagrantfile  antora-playbook.yaml  antora-playbook.yml  articles.html  checkstyle-import-control.xml  (+76 more)
.github/: FUNDING.yml  dependabot.yaml  dependabot.yml  generate-email.sh  pull_request_template.md  stale.yml
api/: pom.xml
changelog/: README.adoc
combined/: pom.xml
core/: build.xml  pom.xml
docs/: 2.17.0-interpolation.md  cve-map.md
failing-test/: pom.xml
flume-ng/: pom.xml
flume-og/: .classpath  .project  pom.xml
getting-started/: index.html
jcl-bridge/: pom.xml
jmx-gui/: pom.xml
jul-to-log4j/: pom.xml
log4j-1.2-api/: .gitignore  bnd.bnd  pom.xml  revapi.json
log4j-api/: .gitignore  pom.xml  (+1 more)
log4j-api-java9/: pom.xml
log4j-api-queue-jctools/: pom.xml
log4j-api-scala_2.10/: pom.xml
log4j-api-scala_2.11/: .gitignore  pom.xml
log4j-api-test/: pom.xml
misc/bazel-test/: BUILD.bazel  test.sh
misc/bazel-test/src/main/java/org/apache/logging/log4j/core/config/plugins/processor/: BUILD.bazel  BazelTestPlugin.java
(+19563 files in other folders)
